# India---Quick-Commerce

./: main.py  pyproject.toml
data/: india_quick.xlsx  ~$india_quick.xlsx
notebooks/: viz.ipynb
