[project]
name = "india-quick-commerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drawarrow>=0.1.0",
    "highlight-text>=0.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyfonts>=1.4.1",
    "pypalettes>=0.2.1",
]
